# skill-atlas

./: .pre-commit-config.yaml  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: architecture.md  rule_schema.md
examples/: README.md  path_of_exile_nodes.json  poe_nodes_example.py  rules.yaml
src/skill_atlas/cli/: main.py
src/skill_atlas/core/: __init__.py  graph.py  node.py
src/skill_atlas/grammar/: __init__.py  rule.py
src/skill_atlas/layout/: radial.py
tests/: conftest.py  test_cli.py  test_core_graph.py  test_core_node.py  test_grammar_rule.py  test_layout_radial.py
